Restored .github/workflows/pkgdown.yaml

--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -2,9 +2,9 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches: [gh-pages]
+    branches: [main, master]
   pull_request:
-    branches: [gh-pages]
+    branches: [main, master]
   release:
     types: [published]
   workflow_dispatch:
@@ -13,13 +13,14 @@ name: pkgdown
 
 jobs:
   pkgdown:
-    runs-on: self-hosted
-    # runs-on: macOS-latest
+    runs-on: ubuntu-latest
     # Only restrict concurrency for non-PR jobs
     concurrency:
       group: pkgdown-${{ github.event_name != 'pull_request' || github.run_id }}
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v3
 
