--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,6 +85,7 @@ export(TileImage)
 export(UpdateImageInfo)
 export(UpdateSTUtilityV1Object)
 export(UpdateSeuratForSemla)
+export(UpdateSeuratFromSemla)
 export(centroid_angles_plot)
 export(export_coordinates)
 export(export_graph)
