--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,6 +93,7 @@ export(file_server)
 export(ftrviewer)
 export(ftrviewerOutput)
 export(generate_rigid_transform)
+export(get_array_rotation)
 export(icp)
 export(osddu)
 export(osdduOutput)
