Updates to vignettes and _pkgdown.yml for building website
* Read in pre-saved plots in compare_cell_type_mapping_NNLS vignette
* Update correct paths for mouse kidney data in cell_type_mapping_with_NNLS vignette
* Minor text edits and typo fixes in NNMF and IF_data vignettes
* Add get_array_rotation to _pkgdown.yml file

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -149,6 +149,7 @@ reference:
 - contents:
   - CoordMirror
   - CoordTransform
+  - get_array_rotation
 - subtitle: Spatial methods
 - contents:
   - GetSpatialNetwork
