Add vignette folder for hBrCa_IF data to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,16 +6,17 @@
 .renvignore
 notebooks/
 presentations/
-vignettes/mousebrain/
-vignettes/kidney/
 package.json
 webpack.config.js
 yarn.lock
+vignettes/mousebrain/
+vignettes/kidney/
 vignettes/bc_visium/
 vignettes/R_objects/
 vignettes/demo_data/
 vignettes/synthetic_spots/
 vignettes/IF_data/
+vignettes/hBrCa_IF
 vignettes/10x_data
 BC_data/
 demo_data/
