Minor fixes and updates of imported packages and functions
And fix typo in README. Removed `DefaultAssay<-` from import in cell_type_prediction.R since it raised an error in the check.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -137,7 +137,6 @@ importFrom(Seurat,Read10X_h5)
 importFrom(Seurat,RenameCells)
 importFrom(Seurat,VariableFeatures)
 importFrom(Seurat,WhichCells)
-importFrom(Seurat,`DefaultAssay<-`)
 importFrom(SeuratObject,RowMergeSparseMatrices)
 importFrom(dbscan,kNN)
 importFrom(dplyr,across)
@@ -263,7 +262,9 @@ importFrom(stats,median)
 importFrom(stats,na.omit)
 importFrom(stats,p.adjust)
 importFrom(stats,pnorm)
+importFrom(stats,pt)
 importFrom(stats,setNames)
+importFrom(tibble,add_column)
 importFrom(tibble,as_tibble)
 importFrom(tibble,column_to_rownames)
 importFrom(tibble,rownames_to_column)
