--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -8,6 +8,8 @@ authors:
     href: https://github.com/ludvigla
   Lovisa Franzen:
     href: https://github.com/lfranzen
+  Javier Escudero Morlanes:
+    href: https://github.com/jemorlanes
   Spatial Research:
     href: https://www.spatialresearch.org/
     html: "<img src='man/figures/sr-logo.png' height='36' alt='spatialresearch'/>"
@@ -45,6 +47,8 @@ navbar:
         href: articles/getting_started.html
       - text: Subset/merge
         href: articles/subset_and_merge.html
+      - text: VisiumHD
+        href: articles/visiumHD.html        
       - text: '-------'
       - text: Spatial visualization
       - text: Map numeric features
