Adding grid functionalities for plotting (#38)
* Initial commit of grid plots for MapFeatures using pxl coords

* Raster takes the xy array coordinates but the size of the plot is still done with the original dimensions

* spatial_feature_grid_plot takes raster in array coordinates. Next step is HE transformations and warnings

* MapFeatures plots multiple grids with their own sizes. Missing warning for tilted image + raster

* MapFeatures plots multiple grids with their own sizes. Missing warning for tilted image + raster

* Raster plot woHE works. Next is tile plot woHE that takes xy array coords

* MapFeatures done, MapLabels and MapMultipleFeatures TBD

* Solved bug where MapLabels() wouldn't work. TODO: include square spots

* MapFeatures allows for custom grid size selection

* MapLabels plots with squares now. MapLabels and MapFeatures abort when doing raster if you put an HE

* Modified some checks in MapLabels and MapFeatures for square spots

* MapMultipleFeatures now plots grid spots

* Updated the documentation /man and DESCRIPTION with the new function parameters

* MapFeatures can crop areas for grid plots

* MapLabels allows for crops when no image is used

* MapMultipleFeatures accepts crops when no image + array coords

* Modified documentation for new -tech- argument

* Added tests for tile and raster in MapFeatures. Solved a few bugs on the way

* Rearranged the tests for MapFeatures

* Added tests for MapLabels in raster and tile shapes

* Added tests for MapMultipleFeatures tile and raster

* Adjusted scale_y-x so that they dont rotate the plots in current VisHD

* Removed debugging print statements

* Added ignore for VisiumHD vignette

* Initial version of VisiumHD's vignette for loading and plotting

* Text changes to VisiumHD vignette

* MapFeaturesSummary should take shapes

* Minor updates to VisiumHD vignette

* Update pkgdown yml to include VisiumHD vignette

* Removed commented o

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ vignettes/synthetic_spots/
 vignettes/IF_data/
 vignettes/hBrCa_IF
 vignettes/10x_data
+vignettes/visiumHD
 BC_data/
 demo_data/
 manuscript_items/
@@ -25,3 +26,5 @@ stereoscope/
 renv/
 Dockerfile
 TODO.md
+tests/testthat/Rplots.pdf
+.DS_store
