--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: semla
 Type: Package
 Title: Spatially Resolved Transcriptomics Data Processing, Analysis and Visualization
-Version: 1.1.6
+Version: 1.2.0
 Authors@R:
     c(person(
         "Ludvig", "Larsson",
@@ -14,6 +14,11 @@ Authors@R:
         email = "lovisa.franzen@scilifelab.se",
         role = c("aut"),
         comment = c(ORCID = "0000-0003-3755-718X")
+    ),
+    person(
+        "Javier", "Escudero Morlanes",
+        email = "javier.escudero.morlanes@scilifelab.se",
+        role = c("aut"))
     ),
     person(
         "Spatial", "Research", 
