Minor updates to DESCRIPTION, NEWS, and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ vignettes/IF_data/
 vignettes/hBrCa_IF
 vignettes/10x_data
 vignettes/visiumHD
+vignettes/compare_cell_type_mapping_NNLS_files/
 BC_data/
 demo_data/
 manuscript_items/
