--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Authors@R:
     person(
         "Javier", "Escudero Morlanes",
         email = "javier.escudero.morlanes@scilifelab.se",
-        role = c("aut"))
+        role = c("aut")
     ),
     person(
         "Spatial", "Research", 
