--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ S3method("$",Staffli)
 S3method(.DollarNames,Staffli)
 S3method(CorSpatialFeatures,Seurat)
 S3method(CorSpatialFeatures,default)
+S3method(CreateMultiModalObject,Seurat)
+S3method(CreateMultiModalObject,default)
 S3method(DisconnectRegions,Seurat)
 S3method(DisconnectRegions,default)
 S3method(GetSpatialNetwork,Seurat)
@@ -38,6 +40,7 @@ export(CoordAndImageTransform)
 export(CoordMirror)
 export(CoordTransform)
 export(CorSpatialFeatures)
+export(CreateMultiModalObject)
 export(CreateStaffliObject)
 export(CutSpatialNetwork)
 export(DisconnectRegions)
@@ -63,6 +66,7 @@ export(MapFeaturesSummary)
 export(MapLabels)
 export(MapLabelsSummary)
 export(MapMultipleFeatures)
+export(MapPointsToReference)
 export(MaskImages)
 export(MergeSTData)
 export(ModifyPatchworkTitles)
@@ -120,6 +124,8 @@ import(glue)
 import(rlang)
 import(shiny)
 import(tibble)
+import(tidyr)
+importFrom(Matrix,Matrix)
 importFrom(Matrix,colMeans)
 importFrom(Matrix,colSums)
 importFrom(Matrix,rowMeans)
