Update gitignore to ignore vignette data

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ vignettes/hBrCa_IF
 vignettes/10x_data
 vignettes/visiumHD
 vignettes/compare_cell_type_mapping_NNLS_files/
+vignettes/multimodal_data/
 BC_data/
 demo_data/
 manuscript_items/
