--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: semla
 Type: Package
 Title: Spatially Resolved Transcriptomics Data Processing, Analysis and Visualization
-Version: 1.2.1
+Version: 1.3.0
 Authors@R:
     c(person(
         "Ludvig", "Larsson",
@@ -36,11 +36,11 @@ Depends:
     dplyr (>= 1.0.0),
     ggplot2 (>= 3.3.0)
 Imports:
-    cli, 
-    forcats, 
-    jsonlite, 
-    rlang, 
-    tibble, 
+    cli,
+    forcats,
+    jsonlite,
+    rlang,
+    tibble,
     tidyr,
     methods,
     glue,
@@ -53,7 +53,8 @@ Imports:
     RColorBrewer,
     shiny,
     shinyjs,
-    reactR
+    reactR,
+    arrow
 RoxygenNote: 7.3.2
 Suggests: 
     farver,
