Add new functions to pkgdown

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -115,6 +115,8 @@ reference:
   - TileImage
   - export_coordinates
   - export_graph
+  - MapPointsToReference
+  - CreateMultiModalObject
 - subtitle: Visualization
 - contents:
   - MapFeatures
