update documentation and correct typo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -134,15 +134,17 @@ importFrom(Seurat,AddMetaData)
 importFrom(Seurat,CreateAssayObject)
 importFrom(Seurat,CreateDimReducObject)
 importFrom(Seurat,CreateSeuratObject)
-importFrom(Seurat,DefaultAssay)
 importFrom(Seurat,FetchData)
-importFrom(Seurat,GetAssayData)
 importFrom(Seurat,Idents)
 importFrom(Seurat,Read10X)
 importFrom(Seurat,Read10X_h5)
 importFrom(Seurat,RenameCells)
 importFrom(Seurat,VariableFeatures)
 importFrom(Seurat,WhichCells)
+importFrom(SeuratObject,"DefaultAssay<-")
+importFrom(SeuratObject,CreateAssay5Object)
+importFrom(SeuratObject,GetAssayData)
+importFrom(SeuratObject,LayerData)
 importFrom(SeuratObject,RowMergeSparseMatrices)
 importFrom(dbscan,kNN)
 importFrom(dplyr,across)
@@ -174,7 +176,7 @@ importFrom(ggplot2,geom_density)
 importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,geom_violin)
 importFrom(ggplot2,ggplot)
-importFrom(ggplot2,is.ggplot)
+importFrom(ggplot2,is_ggplot)
 importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,scale_y_reverse)
