--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -78,7 +78,8 @@ Suggests:
     ggfittext,
     hdf5r,
     spelling,
-    arrow
+    arrow,
+    stringr
 Collate: 
     'checks.R'
     'generics.R'
